syntax = "proto3";

option go_package = "proto/foo";

package foo;

message UserCreateRequest {
  string name = 1;
  string username = 2;
  string password = 3;
}

message UserUpdateRequest {
  int64 id = 1;
  string name = 2;
  string username = 3;
}

message UserByIDRequest {
  int64 id = 1;
}

message User {
  uint64 id = 1;
  string name = 2;
  string username = 3;
  string created_at = 4;
  string updated_at = 5;
  string deleted_at = 6;
}

message Users {
  repeated User users = 4;
}

message UserListQuery {
}

message UserDeleteResponse {
  string message = 1;
}

service UserService {
  rpc GetUserList(UserListQuery) returns (Users) {}
  rpc CreateUser(UserCreateRequest) returns (User) {}
  rpc UpdateUser(UserUpdateRequest) returns (User) {}
  rpc GetUser(UserByIDRequest) returns (User) {}
  rpc DeleteUser(UserByIDRequest) returns (UserDeleteResponse) {}
}




